tests/ui/feature-gates/feature-gate-splat.stderr
error[E0658]: the `#[splat]` attribute is an experimental feature
  --> $DIR/feature-gate-splat.rs:3:5
   |
LL |     #[splat]
   |     ^^^^^^^^
   |
   = note: see issue #153629 <https://github.com/rust-lang/rust/issues/153629> for more information
   = help: add `#![feature(splat)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0658`.
